PFA 2026 - Application restaurant complète (backend + frontend + Docker)